--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^10.0.0",
@@ -17,7 +18,9 @@
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
     "morgan": "1.10.0",
-    "nanoid": "^3.1.28"
+    "nanoid": "^3.1.28",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
