--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dotenv": "^10.0.0",
     "express": "4.17.1",
     "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
     "morgan": "1.10.0",
     "nanoid": "^3.1.28",
     "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
