--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
     "morgan": "1.10.0",
+    "multer": "^1.4.3",
     "nanoid": "^3.1.28",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
