--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.5.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.27.1",
     "cors": "2.8.5",
@@ -20,12 +21,14 @@
     "joi": "^17.4.2",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
+    "mailgen": "^2.0.15",
     "mkdirp": "^1.0.4",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
     "morgan": "1.10.0",
     "multer": "^1.4.3",
     "nanoid": "^3.1.28",
+    "nodemailer": "^6.7.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
